[package]
name = "foo"
version = "0.1.0"
edition = "2018"

[patch.crates-io]
# See comments in `library/rustc-std-workspace-core/README.md` for what's going on
# here
rustc-std-workspace-core = { path = 'rust/library/rustc-std-workspace-core' }
rustc-std-workspace-alloc = { path = 'rust/library/rustc-std-workspace-alloc' }
rustc-std-workspace-std = { path = 'rust/library/rustc-std-workspace-std' }
